added acc num input and bankName inp on profile form

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -70,6 +70,16 @@ body {
     }
   }
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 .min {
   min-height: 100vh;
 }
